2010-08-20 Max Derhak
 * 1.6.1 release
 * Modifications to CIccTagLut16 and CIccTagLut8 to correctly track curve mapping when table
   is used as an output table and PCS is XYZ.  In this case M and B curves are swapped since
   the legacy Lut16 and Lut8 tags do not have M curves.
 * Removed check in CIccXform::Create() for BtoD0/DtoB0 tags if BtoDx/DtoBx tag for rendering
   intent not found (as this never made it into the approved specification).
 
2010-07-28 Max Derhak
 * 1.6.0 release
 * Moved main Build for Windows systems to Build\MSVC folder with intent to add builds for
   other systems to Build folder
 * Incorporated changes from Joseph Goldstone that eliminate various compiler warnings
 * Modified CIccProfile::Write() to allow for options in how ProfileIDs are created 
   (Example: ByProfileVersion/Always/Never)
 
2010-05-19 Max Derhak
 * Fixed crashing bug with gamut tags with XYZ PCS
 * Modified CLUT::dump to use reflect legacy encoding of when lut16 tags are used

2010-05-06 Max Derhak
 * Modified IccProfLibConf.h and IccConvertUTF.h to properly define 32 bit types for 64 bit
   compilers
 * Added IccProfLibVer.h to define macro that has version for IccProfLib

2010-04-28 Rohit Patil
 * Modified IccProfLibTest to allow modification of ProfileDescription and Copyright tags

2010-03-12 Max Derhak
 * Added support for PrintConditions tag implemented using Dictionary tag type

2009-01-22 Rohit Patil/Max Derhak
 * Added CIccCreateXformHintManager to allow for a list of hint object to be passed
   in at the time of CIccXform creation.
 * Modified PCS adjustment to use a scale and offset in new function CIccXform::AdjustPCS().
   CIccXform::CheckSrcAbs and CIccXform::CheckDestAbs now use CIccXform::AdjustPCS()
 * Hint mechanism can now be used to set up scale and offset values.
 * Added CIccApplyBPCHint and CIccApplyBPC classes in IccApplyBPC.cpp and IccApplyBPC.h
   to provide optional support for Adobe Black Point Compensation